--- a/css/style.scss
+++ b/css/style.scss
@@ -413,3 +413,65 @@ article {
     width: 270px;
   }
 }
+
+/* * * * * * * * *
+*	contact
+* * * * * * * * */
+
+// select {
+//   min-width: 400px;
+// }
+.cont1 {
+  text-align: left;
+}
+// #mailform table tr th {
+//   padding: 40px 0 10px;
+// }
+// tr {
+//   display: block;
+//   th ,td {
+//     display: block;
+//     text-align-last: left;
+//     min-width: 700px;
+//   }
+// }
+#mailform input {
+  width: 800px;
+  padding: 20px;
+}
+
+#mailform {
+  .con-phase {
+    table {
+      tbody {
+        tr {
+          padding: 30px 0 10px;
+          display: block;
+          text-align: left;
+          th {
+            display: block;
+          }
+          td {
+            width: 1080px;
+            textarea {
+              width: 1080px;
+              height: 500px;
+            }
+            .select {
+              select {
+                min-width: 400px;
+                padding: 20px;
+
+                option {
+                }
+                input {
+                  width: 1080px;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
