--- a/css/preset.css
+++ b/css/preset.css
@@ -48,7 +48,6 @@ a {
 h2 {
   font-size: 4.5rem;
   margin-bottom: 10px;
-  margin-top: 50px;
 }
 
 tr, th {
@@ -73,7 +72,7 @@ img {
 .sub_t {
   font-size: 2rem;
   letter-spacing: 1.2rem;
-  margin-bottom: 30px;
+  margin-bottom: 50px;
 }
 
 /* * * * * * * * *
@@ -453,6 +452,50 @@ footer {
   background-color: #f4f3ef;
 }
 
+/*	btn-8 お問い合わせ送信ボタン
+-------------------------------*/
+.btn-8 button {
+  text-align: center;
+  display: block;
+  position: relative;
+  margin: 0 auto;
+  padding: 1em 2em;
+  width: 380px;
+  color: #fff;
+  font-size: 1.6rem;
+  border: 1px solid #fff;
+  background-color: #8aa2a0;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.btn-8 button::after {
+  content: '';
+  position: absolute;
+  top: 50%;
+  right: -35px;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  width: 70px;
+  height: 1px;
+  background-color: #e5e5e5;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.btn-8 button:hover {
+  text-decoration: none;
+  background-color: #F5F8F6;
+  border: 1px solid #36374b;
+  color: #adabae;
+}
+
+.btn-8 button:hover::after {
+  -webkit-transform: translateX(3px);
+          transform: translateX(3px);
+  background-color: #36374b;
+}
+
 /* * * * * * * * *
 *	hover
 * * * * * * * * */
@@ -590,12 +633,12 @@ footer {
 
 .photo_t {
   width: 500px;
-  height: 617px;
+  height: 750px;
 }
 
 .photo_y {
   width: 500px;
-  height: 334px;
+  height: 300px;
 }
 
 .d-f {
@@ -650,6 +693,10 @@ footer {
   text-align: center;
 }
 
+.ta-l {
+  text-align: left;
+}
+
 .d-i {
   display: inline;
 }
@@ -669,6 +716,22 @@ footer {
 
 .ta-l {
   text-align-last: left;
+}
+
+.mb_50 {
+  margin-bottom: 60px;
+}
+
+.mb_35 {
+  margin-bottom: 35px;
+}
+
+.mb_100 {
+  margin-bottom: 100px;
+}
+
+.mt_50 {
+  margin-top: 50px;
 }
 
 /* * * * * * * * *
