--- a/css/style.css
+++ b/css/style.css
@@ -89,8 +89,13 @@
   padding: 60px;
 }
 
+#news #news_a {
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+
 #news #news_a p {
-  margin-bottom: 35px;
   font-size: 1.6rem;
   letter-spacing: .38rem;
 }
@@ -323,13 +328,17 @@ article {
 }
 
 .sp-dt-main .sp-dt-sub1 .sp-dt-sub-d1 {
-  margin-right: 20px;
+  height: 350px;
+  margin-right: 10px;
 }
 
 .sp-dt-main .sp-dt-sub1 .sp-dt-sub-d1 img {
-  width: 125px;
-  height: 125px;
-  margin-bottom: 10px;
+  width: 110px;
+  height: 110px;
+}
+
+.sp-dt-main .sp-dt-sub1 .sp-dt-sub-d1 img:last-child {
+  margin-bottom: 0;
 }
 
 .sp-dt-main .sp-dt-sub1 .sp-dt-sub-d2 {
@@ -365,7 +374,7 @@ article {
 }
 
 .sp-dt-main .sp-dt-sub2 .dt-size .dt-size-po {
-  margin-left: 100px;
+  margin-left: 60px;
 }
 
 .sp-dt-main .sp-dt-sub2 .dt-size-dt {
@@ -381,6 +390,10 @@ article {
   font-size: 1.5rem;
   border: solid 1px #333;
   letter-spacing: 0;
+}
+
+.sp-dt-main .sp-dt-sub2 .dt-size-dt .dt-size p {
+  margin-left: 20px;
 }
 
 .sp-dt-main .sp-dt-sub2 .dt-text {
@@ -493,11 +506,6 @@ article {
   text-align: left;
 }
 
-#mailform input {
-  width: 800px;
-  padding: 20px;
-}
-
 #mailform .con-phase table tbody tr {
   padding: 30px 0 10px;
   display: block;
@@ -514,15 +522,21 @@ article {
 
 #mailform .con-phase table tbody tr td textarea {
   width: 1080px;
-  height: 500px;
+  height: 300px;
 }
 
-#mailform .con-phase table tbody tr td .select select {
+#mailform .con-phase table tbody tr td input {
+  width: 1080px;
+  padding: 20px;
+}
+
+#mailform .con-phase table tbody tr .select select {
   min-width: 400px;
   padding: 20px;
 }
 
-#mailform .con-phase table tbody tr td .select select input {
-  width: 1080px;
+#mailform .btn-8 {
+  margin-top: 50px;
+  margin-bottom: 120px;
 }
 /*# sourceMappingURL=style.css.map */
