--- a/css/style.css
+++ b/css/style.css
@@ -324,7 +324,8 @@ article {
 }
 
 .sp-dt-main .sp-dt-sub1 {
-  margin-right: 20px;
+  width: 100px;
+  margin-left: 100px;
 }
 
 .sp-dt-main .sp-dt-sub1 .sp-dt-sub-d1 {
@@ -333,8 +334,10 @@ article {
 }
 
 .sp-dt-main .sp-dt-sub1 .sp-dt-sub-d1 img {
-  width: 110px;
+  width: 350px;
   height: 110px;
+  vertical-align: bottom;
+  /*画像の下にできる余白を削除*/
 }
 
 .sp-dt-main .sp-dt-sub1 .sp-dt-sub-d1 img:last-child {
@@ -353,12 +356,14 @@ article {
 }
 
 .sp-dt-main .sp-dt-sub2 .sp-dt-name {
-  font-size: 1.8rem;
+  font-size: 2rem;
+  font-weight: 600;
 }
 
 .sp-dt-main .sp-dt-sub2 .sp-dt-name2 {
-  margin-bottom: 20px;
-  font-size: 1.4rem;
+  margin-bottom: 40px;
+  font-size: 1.6rem;
+  font-weight: 600;
 }
 
 .sp-dt-main .sp-dt-sub2 .dt-price {
@@ -366,7 +371,8 @@ article {
   height: 40px;
   line-height: 40px;
   font-size: 1.5rem;
-  margin-bottom: 20px;
+  margin-bottom: 40px;
+  font-weight: 600;
 }
 
 .sp-dt-main .sp-dt-sub2 .dt-size .dt-size-ti {
@@ -378,7 +384,7 @@ article {
 }
 
 .sp-dt-main .sp-dt-sub2 .dt-size-dt {
-  margin-bottom: 20px;
+  margin-bottom: 30px;
 }
 
 .sp-dt-main .sp-dt-sub2 .dt-size-dt .dt-size {
@@ -394,6 +400,21 @@ article {
 
 .sp-dt-main .sp-dt-sub2 .dt-size-dt .dt-size p {
   margin-left: 20px;
+}
+
+.sp-dt-main .sp-dt-sub2 .dt-size-dt .dt-size2 {
+  margin-right: 20px;
+  text-align: center;
+  width: 80px;
+  height: 40px;
+  line-height: 40px;
+  font-size: 1.5rem;
+  border: solid 1px #333;
+  letter-spacing: 0;
+}
+
+.sp-dt-main .sp-dt-sub2 .dt-size-dt .dt-size2 p {
+  margin-left: 23px;
 }
 
 .sp-dt-main .sp-dt-sub2 .dt-text {
