--- a/css/preset.css
+++ b/css/preset.css
@@ -12,6 +12,7 @@
 
 html {
   font-size: 50%;
+  overflow-x: hidden;
 }
 
 img {
@@ -73,6 +74,17 @@ img {
   font-size: 2rem;
   letter-spacing: 1.2rem;
   margin-bottom: 50px;
+}
+
+button {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  outline: none;
+  padding: 0;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
 }
 
 /* * * * * * * * *
@@ -306,7 +318,7 @@ footer {
   position: relative;
   margin: 0 auto;
   padding: 8em 8em;
-  max-width: 1080px;
+  width: 1000px;
   color: #36374b;
   -webkit-transition: 0.3s;
   transition: 0.3s;
@@ -341,10 +353,10 @@ footer {
   content: '';
   position: absolute;
   top: 50%;
-  right: -120px;
+  right: -100px;
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
-  width: 240px;
+  width: 200px;
   height: 3px;
   background-color: #36374b;
   -webkit-transition: 0.3s;
@@ -364,9 +376,9 @@ footer {
   background-color: #f4f3ef;
 }
 
-/*	btn-6 shoping CHEESECAKE 他の
+/*	btn-6 shopping CHEESECAKE 他の
 -------------------------------*/
-.btn-6 a {
+.btn-6 span {
   text-align: center;
   display: block;
   position: relative;
@@ -381,7 +393,7 @@ footer {
   transition: 0.3s;
 }
 
-.btn-6 a::after {
+.btn-6 span::after {
   content: '';
   position: absolute;
   top: 50%;
@@ -395,14 +407,14 @@ footer {
   transition: 0.3s;
 }
 
-.btn-6 a:hover {
+.btn-6 span:hover {
   text-decoration: none;
   background-color: #F5F8F6;
   border: 1px solid #36374b;
   color: #adabae;
 }
 
-.btn-6 a:hover::after {
+.btn-6 span:hover::after {
   -webkit-transform: translateX(3px);
           transform: translateX(3px);
   background-color: #36374b;
@@ -736,6 +748,12 @@ footer {
 
 .ml_10 {
   margin-left: 10px;
+}
+
+button {
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
 }
 
 /* * * * * * * * *
