--- a/css/preset.scss
+++ b/css/preset.scss
@@ -6,7 +6,10 @@
 *, *::before, *::after {
   box-sizing: border-box;
 }
-html { font-size: 50%; }
+html {
+  font-size: 50%;
+  overflow-x: hidden;
+}
 img { width: 100%; }
 body {
   color: #333;
@@ -57,6 +60,14 @@ img {
   font-size: 2rem;
   letter-spacing: 1.2rem;
   margin-bottom: 50px;
+}
+button{
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  outline: none;
+  padding: 0;
+  appearance: none;
 }
 
 /* * * * * * * * *
@@ -254,12 +265,13 @@ footer {
 
 /*	btn-5 footer 共通
 -------------------------------*/
+
 .btn-5 a {
   display: block;
   position: relative;
   margin: 0 auto;
   padding: 8em 8em;
-  max-width: 1080px;
+  width: 1000px;
   color: $ftr-1;
   transition: 0.3s;
   border: 10px solid $ftr-1;
@@ -283,9 +295,9 @@ footer {
   content: '';
   position: absolute;
   top: 50%;
-  right: -120px;
+  right: -100px;
   transform: translateY(-50%);
-  width: 240px;
+  width: 200px;
   height: 3px;
   background-color: $ftr-1;
   transition: 0.3s;
@@ -304,9 +316,9 @@ footer {
   background-color: #f4f3ef;
 }
 
-/*	btn-6 shoping CHEESECAKE 他の
+/*	btn-6 shopping CHEESECAKE 他の
 -------------------------------*/
-.btn-6 a {
+.btn-6 span {
   text-align: center;
   display: block;
   position: relative;
@@ -321,7 +333,7 @@ footer {
 }
 
 
-.btn-6 a::after {
+.btn-6 span::after {
   content: '';
   position: absolute;
   top: 50%;
@@ -333,14 +345,14 @@ footer {
   transition: 0.3s;
 }
 
-.btn-6 a:hover {
+.btn-6 span:hover {
   text-decoration: none;
   background-color: $ucafe-color;
   border: 1px solid $btn4-1;
   color: #adabae;
 }
 
-.btn-6 a:hover::after {
+.btn-6 span:hover::after {
   transform: translateX(3px);
   background-color: $btn4-1;
 }
@@ -606,6 +618,11 @@ footer {
 }
 .ml_10 {
   margin-left: 10px;
+}
+button{
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
 }
 /* * * * * * * * *
 *	border bdr-1 CHEESECAKE
