--- a/css/style.css
+++ b/css/style.css
@@ -389,17 +389,24 @@ article {
 
 .sp-dt-main .sp-dt-sub2 .dt-size-dt .dt-size {
   margin-right: 20px;
-  text-align: center;
+  cursor: pointer;
+  /*カーソルを指マークに変更*/
+  background-color: #fff;
   width: 80px;
   height: 40px;
   line-height: 40px;
   font-size: 1.5rem;
   border: solid 1px #333;
   letter-spacing: 0;
+  padding-left: 20px;
 }
 
-.sp-dt-main .sp-dt-sub2 .dt-size-dt .dt-size p {
-  margin-left: 20px;
+.sp-dt-main .sp-dt-sub2 .dt-size-dt .dt-size:hover {
+  background-color: #F5F8F6;
+}
+
+.sp-dt-main .sp-dt-sub2 .dt-size-dt .dt-size:focus {
+  background-color: #F5F8F6;
 }
 
 .sp-dt-main .sp-dt-sub2 .dt-size-dt .dt-size2 {
@@ -527,6 +534,10 @@ article {
   text-align: left;
 }
 
+#mailform .con-phase {
+  width: 1000px;
+}
+
 #mailform .con-phase table tbody tr {
   padding: 30px 0 10px;
   display: block;
@@ -538,16 +549,16 @@ article {
 }
 
 #mailform .con-phase table tbody tr td {
-  width: 1080px;
+  width: 1000px;
 }
 
 #mailform .con-phase table tbody tr td textarea {
-  width: 1080px;
+  width: 1000px;
   height: 300px;
 }
 
 #mailform .con-phase table tbody tr td input {
-  width: 1080px;
+  width: 1000px;
   padding: 20px;
 }
 
