お問い合わせフォームが上手く行かない

--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,7 @@
 .head-bg-img {
   width: 100%;
   height: 700px;
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(53, 37, 37, 0.2)), to(rgba(0, 0, 0, 0.2))), url(../img/kari/header.jpg);
-  background: linear-gradient(rgba(53, 37, 37, 0.2), rgba(0, 0, 0, 0.2)), url(../img/kari/header.jpg);
+  background-image: url(../img/kari/header.jpg);
   background-size: cover;
 }
 
@@ -57,17 +56,20 @@
 }
 
 #aboutus_a #aboutus_b #ap {
-  margin-top: -110px;
+  margin-top: 30px;
   font-size: 3.3rem;
   line-height: 1.8;
   letter-spacing: 1.7rem;
+  font-weight: 500;
 }
 
 #aboutus_a #aboutus_b p {
-  margin-top: 111px;
-  width: 463px;
+  margin-top: 110px;
+  line-height: 2.2;
+  width: 550px;
   font-size: 1.6rem;
   background: #fff;
+  font-weight: 500;
 }
 
 #ai-1 {
@@ -248,7 +250,7 @@
 #access img {
   width: 280px;
   height: 400px;
-  margin: 200px 0 0 120px;
+  margin: 200px 0 0 60px;
 }
 
 #access .map_a {
@@ -555,6 +557,7 @@ article {
 #mailform .con-phase table tbody tr td textarea {
   width: 1000px;
   height: 300px;
+  padding: 20px;
 }
 
 #mailform .con-phase table tbody tr td input {
@@ -570,5 +573,57 @@ article {
 #mailform .btn-8 {
   margin-top: 50px;
   margin-bottom: 120px;
+}
+
+/* * * * * * * * * * * * * * *
+*	confirm 問い合わせ（確認）
+* * * * * * * * * * * * * * */
+.container {
+  width: 100%;
+  margin: 0 auto;
+  color: #707070;
+}
+
+.container .nerp-1 {
+  margin-top: 50px;
+  margin-bottom: 20px;
+  font-size: 3rem;
+}
+
+.container .conf_table1 {
+  margin-bottom: 30px;
+  font-size: 1.5rem;
+  margin-top: 60px;
+}
+
+.container .conf_table1 .conf_table2 {
+  margin: 0 auto;
+}
+
+.container .conf_table1 .conf_table2 caption {
+  text-align-last: left;
+}
+
+.container .conf_table1 .conf_table2 tr {
+  text-align-last: left;
+  border: 1px solid #333;
+}
+
+.container .conf_table1 .conf_table2 tr th {
+  padding: 20px 20px 20px 10px;
+  border: 1px solid #333;
+}
+
+.container .conf_table1 .conf_table2 tr td {
+  padding: 20px 20px 20px 10px;
+}
+
+.container form {
+  margin-right: 30px;
+  display: inline-block;
+}
+
+.error {
+  color: #BC4242;
 }
 /*# sourceMappingURL=style.css.map */
