--- a/css/preset.css
+++ b/css/preset.css
@@ -33,7 +33,6 @@ body {
 .inner {
   max-width: 1080px;
   margin: 0 auto;
-  padding: 0 40px;
 }
 
 ul {
@@ -508,6 +507,54 @@ footer {
   background-color: #36374b;
 }
 
+/*	btn-9 お問い合わせ戻るボタン
+-------------------------------*/
+.btn-9 button {
+  text-align: center;
+  display: block;
+  position: relative;
+  margin: 0 auto;
+  padding: 1em 2em;
+  width: 95px;
+  color: #707070;
+  font-size: 1.4rem;
+  border: 1px solid #707070;
+  background-color: #fff;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.btn-9 button:hover {
+  text-decoration: none;
+  background-color: #36374b;
+  border: 1px solid #707070;
+  color: #fff;
+}
+
+/*	btn-10 お問い合わせ確認送信ボタン
+-------------------------------*/
+.btn-10 button {
+  text-align: center;
+  display: block;
+  position: relative;
+  margin: 0 auto;
+  padding: 1em 2em;
+  width: 105px;
+  color: #fff;
+  font-size: 1.4rem;
+  border: 1px solid #fff;
+  background-color: #8aa2a0;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.btn-10 button:hover {
+  text-decoration: none;
+  background-color: #F5F8F6;
+  border: 1px solid #36374b;
+  color: #adabae;
+}
+
 /* * * * * * * * *
 *	hover
 * * * * * * * * */
@@ -748,6 +795,10 @@ footer {
 
 .ml_10 {
   margin-left: 10px;
+}
+
+.pdp {
+  padding: 0 100px 0;
 }
 
 button {
