--- a/css/preset.scss
+++ b/css/preset.scss
@@ -25,7 +25,7 @@ body {
 .inner {
   max-width: 1080px;
   margin: 0 auto;
-  padding: 0 40px;
+  // padding: 0 40px;
 }
 ul {
   list-style: none;
@@ -38,7 +38,6 @@ a {
 h2 {
   font-size: 4.5rem;
   margin-bottom: 10px;
-  // margin-top: 50px;
 }
 tr , th{
   font-weight: normal;
@@ -368,7 +367,6 @@ footer {
   color: #333;
   font-size: 1.6rem;
   border: 1px solid #333;
-  // font-weight: 700;
   background-color: #fff;
   transition: 0.3s;
 }
@@ -436,6 +434,52 @@ footer {
 .btn-8 button:hover::after {
   transform: translateX(3px);
   background-color: $btn4-1;
+}
+/*	btn-9 お問い合わせ戻るボタン
+-------------------------------*/
+.btn-9 button {
+  text-align: center;
+  display: block;
+  position: relative;
+  margin: 0 auto;
+  padding: 1em 2em;
+  width: 95px;
+  color: #707070;
+  font-size: 1.4rem;
+  border: 1px solid #707070;
+  background-color: #fff;
+  transition: 0.3s;
+}
+
+.btn-9 button:hover {
+  text-decoration: none;
+  background-color: $btn4-1;
+  border: 1px solid #707070;
+  color: #fff;
+}
+
+
+/*	btn-10 お問い合わせ確認送信ボタン
+-------------------------------*/
+.btn-10 button {
+  text-align: center;
+  display: block;
+  position: relative;
+  margin: 0 auto;
+  padding: 1em 2em;
+  width: 105px;
+  color: #fff;
+  font-size: 1.4rem;
+  border: 1px solid #fff;
+  background-color: $atr;
+  transition: 0.3s;
+}
+
+.btn-10 button:hover {
+  text-decoration: none;
+  background-color: $ucafe-color;
+  border: 1px solid $btn4-1;
+  color: #adabae;
 }
 
 /* * * * * * * * *
@@ -618,6 +662,9 @@ footer {
 }
 .ml_10 {
   margin-left: 10px;
+}
+.pdp {
+  padding: 0 100px 0;
 }
 button{
   appearance: none;
