shopping 詳細ページ
枠調整

--- a/css/style.css
+++ b/css/style.css
@@ -353,7 +353,7 @@ article {
 }
 
 .sp-dt-main .sp-dt-sub2 {
-  margin-left: 20px;
+  margin-right: 100px;
   width: 450px;
 }
 
@@ -378,6 +378,7 @@ article {
 }
 
 .sp-dt-main .sp-dt-sub2 .dt-size .dt-size-ti {
+  font-weight: 600;
   font-size: 1.6rem;
 }
 
@@ -398,17 +399,20 @@ article {
   height: 40px;
   line-height: 40px;
   font-size: 1.5rem;
-  border: solid 1px #333;
+  font-weight: 600;
+  border: solid 2px #333;
   letter-spacing: 0;
   padding-left: 20px;
 }
 
 .sp-dt-main .sp-dt-sub2 .dt-size-dt .dt-size:hover {
-  background-color: #F5F8F6;
+  background-color: #bfcdcc;
+  color: #fff;
 }
 
 .sp-dt-main .sp-dt-sub2 .dt-size-dt .dt-size:focus {
-  background-color: #F5F8F6;
+  background-color: #bfcdcc;
+  color: #fff;
 }
 
 .sp-dt-main .sp-dt-sub2 .dt-size-dt .dt-size2 {
