--- a/css/preset.scss
+++ b/css/preset.scss
@@ -176,6 +176,9 @@ header {
 .con_4 {
   border-top: 3px solid #000;
 }
+.w450 {
+  width: 450px;
+}
 /* * * * * * * * *
 *	footer
 * * * * * * * * */
