--- a/css/style.css
+++ b/css/style.css
@@ -358,28 +358,31 @@ article {
 }
 
 .sp-dt-main .sp-dt-sub2 .sp-dt-name {
-  font-size: 2rem;
+  margin-top: -10px;
+  font-size: 2.3rem;
   font-weight: 600;
+  letter-spacing: 0.8rem;
+  margin-bottom: 10px;
 }
 
 .sp-dt-main .sp-dt-sub2 .sp-dt-name2 {
   margin-bottom: 40px;
   font-size: 1.6rem;
-  font-weight: 600;
+  font-weight: 500;
+  letter-spacing: 1.1rem;
 }
 
 .sp-dt-main .sp-dt-sub2 .dt-price {
   width: 200px;
   height: 40px;
   line-height: 40px;
-  font-size: 1.5rem;
-  margin-bottom: 40px;
-  font-weight: 600;
+  font-size: 1.6rem;
+  margin-bottom: 20px;
+  font-weight: 500;
 }
 
 .sp-dt-main .sp-dt-sub2 .dt-size .dt-size-ti {
-  font-weight: 600;
-  font-size: 1.6rem;
+  font-weight: 500;
 }
 
 .sp-dt-main .sp-dt-sub2 .dt-size .dt-size-po {
@@ -399,8 +402,8 @@ article {
   height: 40px;
   line-height: 40px;
   font-size: 1.5rem;
-  font-weight: 600;
-  border: solid 2px #333;
+  font-weight: 500;
+  border: solid 1px #333;
   letter-spacing: 0;
   padding-left: 20px;
 }
@@ -432,6 +435,15 @@ article {
 
 .sp-dt-main .sp-dt-sub2 .dt-text {
   font-size: 1.5rem;
+}
+
+.sp_number {
+  width: 30px;
+  height: 30px;
+  border: 1px solid #333;
+  background-color: #fff;
+  text-align: right;
+  margin-bottom: 40px;
 }
 
 .btn-7 {
@@ -629,5 +641,43 @@ article {
 
 .error {
   color: #BC4242;
+}
+
+/* * * * * * * * *
+*	contact.php
+* * * * * * * * */
+.con-phase .form-group {
+  padding: 30px 0 10px;
+  display: block;
+  text-align: left;
+}
+
+.con-phase .form-group label {
+  display: block;
+}
+
+.con-phase .form-group label span .error {
+  color: #bc4242;
+}
+
+.con-phase .form-group textarea {
+  width: 1000px;
+  height: 300px;
+  padding: 20px;
+}
+
+.con-phase .form-group input {
+  width: 1000px;
+  padding: 20px;
+}
+
+.con-phase .form-group .select select {
+  min-width: 400px;
+  padding: 20px;
+}
+
+.btn-8 {
+  margin-top: 50px;
+  margin-bottom: 120px;
 }
 /*# sourceMappingURL=style.css.map */
