--- a/css/preset.scss
+++ b/css/preset.scss
@@ -5,12 +5,17 @@
 * * * * * * * * */
 *, *::before, *::after {
   box-sizing: border-box;
+  float: none;
+	position: static;
 }
 html {
   font-size: 50%;
   overflow-x: hidden;
 }
-img { width: 100%; }
+img {
+  max-width: 100%;
+	height: auto;
+}
 body {
   color: #333;
   font-family:'PT Sans Caption','PT Sans','ヒラギノ角ゴ Pro W3',' Hiragino Kaku Gothic Pro', 'MeiryoUI', 'MSUIGothic', 'メイリオ', 'Meiryo', 'ＭＳＰゴシック', sans-serif;
@@ -178,6 +183,12 @@ header {
 }
 .w450 {
   width: 450px;
+}
+.w550 {
+  width: 550px;
+}
+.m-auto {
+  margin: 0 auto;
 }
 /* * * * * * * * *
 *	footer
@@ -723,4 +734,25 @@ button{
 }
 .bdr-2::after {
 	margin-left: 50px;
+}
+
+
+/* * * * * * * * * * * * * * * * * * * * * *
+*	スマートフォン：599px [max-width : 599px]
+* * * * * * * *  * * * * * * * * * * * * * */
+
+@media screen and (max-width: 599px) {
+  body {
+    background-color: #00FFFF; /*青色*/
+  }
+}
+
+/* * * * * * * * * * * * * * * * * * * * * *
+*	タブレット：1024px [max-width : 1024px]
+* * * * * * * *  * * * * * * * * * * * * * */
+
+@media screen and (min-width:600px) and (max-width: 1024px) {
+  body {
+    background-color: #66ff00; /*青色*/
+  }
 }
