--- a/css/style.css
+++ b/css/style.css
@@ -651,6 +651,48 @@ article {
   margin: 50px 0;
 }
 
+/* 共通CSS */
+.btn-red {
+  border: 1px solid red;
+  color: red;
+  padding: 5px 10px;
+  font-size: 15px;
+}
+
+/* cart */
+.cart-table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.text-right {
+  text-align: right;
+}
+
+.cart-table th,
+.cart-table td {
+  border: 1px solid #ebeced;
+  vertical-align: middle;
+  padding: 5px 10px;
+}
+
+.cart-table th {
+  background-color: #4c586f;
+  color: #fff;
+}
+
+.cart-table button {
+  margin: 0;
+}
+
+.total td {
+  text-align: center;
+}
+
+.cart-btn {
+  text-align: center;
+}
+
 /* * * * * * * * * * * * * * * * * * * * * *
 *	スマートフォン：599px [max-width : 599px]
 * * * * * * * *  * * * * * * * * * * * * * */
@@ -658,6 +700,45 @@ article {
   body {
     background-color: #00FFFF;
     /*青色*/
+  }
+  /* cart.html */
+  .cart-table {
+    width: 100%;
+    margin: 0 auto;
+  }
+  .cart-table thead {
+    display: none;
+  }
+  .cart-table th,
+  .cart-table td {
+    border: none;
+    padding: 5px 10px;
+    text-align: left;
+  }
+  .cart-table td form {
+    text-align: right;
+    width: 90%;
+  }
+  .cart-table tbody th {
+    display: block;
+    text-align: center;
+  }
+  .cart-table tbody td::before {
+    content: attr(label);
+    float: left;
+    clear: both;
+    font-weight: bold;
+  }
+  .cart-table tr {
+    border: 1px solid #ebeced;
+  }
+  .cart-btn .btn {
+    margin-top: 20px;
+  }
+  .total td {
+    font-weight: bold;
+    text-align: center;
+    padding: 5px 0;
   }
 }
 
