--- a/css/preset.scss
+++ b/css/preset.scss
@@ -18,10 +18,11 @@ img {
 }
 body {
   color: #333;
+  width: 100%;
   font-family:'PT Sans Caption','PT Sans','ヒラギノ角ゴ Pro W3',' Hiragino Kaku Gothic Pro', 'MeiryoUI', 'MSUIGothic', 'メイリオ', 'Meiryo', 'ＭＳＰゴシック', sans-serif;
   line-height: 1.8;
   letter-spacing: 0.2rem;
-  max-width: 1920px;
+  // max-width: 1920px;
   text-align: center;
   margin: 0 auto;
   overflow: auto;
@@ -86,7 +87,10 @@ header {
     border-bottom: 1px solid #fff;
   }
 }
-
+/* スマホ用メニューを非表示 */
+.sp-menu {
+    display: none;
+}
 .nav {
   display: flex;
   align-items: center;
@@ -154,27 +158,9 @@ header {
   margin-bottom: 100px;
 }
 .main_cons {
-  text-align: center;
+  // text-align: center;
 }
-.main_con_i_1 {
-  width: 960px;
-  height: 553px;
-  background-image: url(../img/kari/coffee.jpg);
-  background-size: cover;
-  background-position : center bottom 23%;
-  // float: left;
-}
-.main_con_i_2 {
-  width: 960px;
-  height: 553px;
-  background-image: url(../img/kari/cakea.jpg);
-  background-size: cover;
-  background-position : center bottom 30%;
-  // float: left;
-}
-.clear {
-  clear: both;
-}
+
 .con_3{
   width: 280px;
 }
@@ -331,6 +317,7 @@ footer {
 
 /*	btn-6 shopping CHEESECAKE 他の
 -------------------------------*/
+
 .btn-6 span {
   text-align: center;
   display: block;
@@ -674,6 +661,9 @@ footer {
 .mt_50 {
   margin-top: 50px;
 }
+.mt_15 {
+  margin-top: 15px;
+}
 .ml_10 {
   margin-left: 10px;
 }
@@ -745,6 +735,60 @@ button{
   body {
     background-color: #00FFFF; /*青色*/
   }
+  .pc-menu {
+    display: none;
+  }
+      /* スマホ用メニュー表示 */
+      .sp-menu {
+        margin: 0 auto;
+        width: 90%;
+        position: absolute;
+        top: 60px;
+        width: 100%;
+        background: rgba(76, 88, 111, .8);
+        left: 0;
+    }
+
+    .sp-menu ul li{
+        margin: 0 auto;
+        text-align: center;
+    }
+      /* メニューボタン */
+      .toggle {
+        display: block;
+        width: 35px;
+        height: 30px;
+        position: relative;
+        top: 18px;
+        z-index: 2;
+        float: right;
+    }
+
+    .toggle:hover {
+        cursor: pointer;
+    }
+
+    .toggle span{
+        display: block;
+        height: 3px;
+        background: #fff;
+        position:absolute;
+        width: 100%;
+        left: 0;
+        -webkit-transition: 0.5s ease-in-out;
+        -moz-transition: 0.5s ease-in-out;
+        transition: 0.5s ease-in-out;
+    }
+    .toggle span:nth-child(1){
+        top:0px;
+    }
+    .toggle span:nth-child(2){
+        top:12px;
+    }
+    .toggle span:nth-child(3){
+        top:24px;
+    }
+
 }
 
 /* * * * * * * * * * * * * * * * * * * * * *
