--- a/css/style.css
+++ b/css/style.css
@@ -338,8 +338,7 @@
 .head-bg-img-shop {
   width: 100%;
   height: 600px;
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.2)), to(rgba(0, 0, 0, 0.2))), url(../img/kari/shop1.jpg);
-  background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(../img/kari/shop1.jpg);
+  background-image: url(../img/kari/shop1.jpg);
   background-size: cover;
 }
 
@@ -719,6 +718,20 @@ article {
 .btn-red {
   border: 1px solid red;
   color: red;
+  padding: 5px 10px;
+  font-size: 15px;
+}
+
+.btn-blue {
+  border: 1px solid blue;
+  color: blue;
+  padding: 5px 10px;
+  font-size: 15px;
+}
+
+.btn-gray {
+  border: 1px solid gray;
+  color: gray;
   padding: 5px 10px;
   font-size: 15px;
 }
