--- a/css/style.scss
+++ b/css/style.scss
@@ -268,7 +268,7 @@ transform: translateY(0);
 .head-bg-img-shop {
   width: 100%;
   height: 600px;
-  background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(../img/kari/shop1.jpg);
+  background-image:url(../img/kari/shop1.jpg);
   background-size: cover;
 }
 #shop_inner {
@@ -611,6 +611,18 @@ article {
 .btn-red {
   border: 1px solid red;
   color: red;
+  padding: 5px 10px;
+  font-size: 15px;
+}
+.btn-blue {
+  border: 1px solid blue;
+  color: blue;
+  padding: 5px 10px;
+  font-size: 15px;
+}
+.btn-gray {
+  border: 1px solid gray;
+  color: gray;
   padding: 5px 10px;
   font-size: 15px;
 }
