--- a/css/preset.css
+++ b/css/preset.css
@@ -97,16 +97,15 @@ header .header_under {
   height: 90px;
 }
 
-header .header_under_indx {
-  border-bottom: 1px solid #fff;
-}
-
 /* スマホ用メニューを非表示 */
 .sp-menu {
   display: none;
 }
 
 .nav {
+  position: fixed;
+  z-index: 998;
+  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -117,11 +116,22 @@ header .header_under_indx {
       -ms-flex-pack: justify;
           justify-content: space-between;
   height: 90px;
+  padding: 0 100px;
 }
 
 .nav img {
   width: 120px;
   height: auto;
+}
+
+.bg_b {
+  background-color: rgba(0, 0, 0, 0.2);
+  border-bottom: 1px solid white;
+}
+
+.bg_w {
+  background-color: rgba(255, 255, 255, 0.493);
+  border-bottom: 1px solid black;
 }
 
 .nav_li {
@@ -164,7 +174,7 @@ header .header_under_indx {
 -------------------------------*/
 .shop-ti-big {
   height: 68px;
-  margin-top: 20px;
+  margin-top: 120px;
   background-color: #F5F8F6;
 }
 
